--- a/AndroidStudioProject/HolzToolsMobile/app/build.gradle
+++ b/AndroidStudioProject/HolzToolsMobile/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.takisoft.preferencex:preferencex:1.1.0'
     implementation 'com.jaredrummler:colorpicker:1.1.0'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
