--- a/AndroidStudioProject/HolzToolsMobile/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProject/HolzToolsMobile/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".PropertiesActivity"></activity>
+        <activity android:name=".LedPropertiesActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
