--- a/AndroidStudioProject/HolzToolsMobile/app/build.gradle
+++ b/AndroidStudioProject/HolzToolsMobile/app/build.gradle
@@ -11,7 +11,9 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "1.00"
+
+        resValue "string", "app_version", versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -38,6 +40,7 @@ dependencies {
     implementation 'com.jaredrummler:colorpicker:1.1.0'
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+    implementation 'org.jsoup:jsoup:1.13.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
