--- a/AndroidStudioProject/HolzToolsMobile/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProject/HolzToolsMobile/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/launcher"
@@ -12,8 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".LedPropertiesActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".LedPropertiesActivity" />
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
