Make LogBox resizable

--- a/VisualStudioProject/HolzToolsWPF/HolzTools.csproj
+++ b/VisualStudioProject/HolzToolsWPF/HolzTools.csproj
@@ -131,6 +131,7 @@
     <Compile Include="HolzToolsMobileAlert.xaml.cs">
       <DependentUpon>HolzToolsMobileAlert.xaml</DependentUpon>
     </Compile>
+    <Compile Include="HTTPAttribute.cs" />
     <Compile Include="ModeControls\ModeSpinner.xaml.cs">
       <DependentUpon>ModeSpinner.xaml</DependentUpon>
     </Compile>
@@ -316,6 +317,7 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
