--- a/VisualStudioProject/HolzToolsWPF/HolzTools.csproj
+++ b/VisualStudioProject/HolzToolsWPF/HolzTools.csproj
@@ -173,6 +173,9 @@
     <Compile Include="UserControls\LedStripControl.xaml.cs">
       <DependentUpon>LedStripControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\MultiColorEditor.xaml.cs">
+      <DependentUpon>MultiColorEditor.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
@@ -276,6 +279,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\LedStripControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\MultiColorEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
