Added support for ESP32

--- a/ArduinoSketch/HolzToolsSketch/platformio.ini
+++ b/ArduinoSketch/HolzToolsSketch/platformio.ini
@@ -9,10 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:HolzToolsArduinoSketch]
-platform = atmelavr
-board = nanoatmega328
-framework = arduino
-upload_port = COM5
-platform_packages =
-  ; use GCC AVR 7.3.0+
+; platform = atmelavr
+; board = nanoatmega328
+; framework = arduino
+; upload_port = COM5
+; platform_packages =
+;   ; use GCC AVR 7.3.0+
   toolchain-atmelavr@>=1.70300.0
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+upload_port = COM7
