--- a/AndroidStudioProject/HolzToolsMobile/build.gradle
+++ b/AndroidStudioProject/HolzToolsMobile/build.gradle
@@ -1,4 +1,6 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    activityKtxVersion = '1.2.0-alpha08'
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     ext.kotlin_version = '1.3.72'
