--- a/ArduinoSketch/HolzToolsSketch/platformio.ini
+++ b/ArduinoSketch/HolzToolsSketch/platformio.ini
@@ -19,4 +19,7 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-upload_port = COM7
+upload_protocol = espota
+upload_port = 192.168.0.88
+; upload_port = COM7
+board_build.partitions = holztools_part.csv
