--- a/VisualStudioProject/HolzToolsWPF/packages.config
+++ b/VisualStudioProject/HolzToolsWPF/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ArduinoUploader" version="3.2.0" targetFramework="net46" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net46" />
+  <package id="DotNetZip" version="1.13.8" targetFramework="net46" />
   <package id="Extended.Wpf.Toolkit" version="3.5.0" targetFramework="net46" />
   <package id="Gu.Wpf.Geometry" version="2.2.3.0" targetFramework="net46" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net46" />
